# telegram-bot

./: .env  README.md  docker-compose.yaml  render.yaml  test.py
backend/: pyproject.toml
backend/backend/: app.py  config.py  handlers.py  routers.py  schemas.py  services.py  utils.py
backend/backend/db/: connect.py  models.py  schemas.py
backend/backend/routers/: api.py  handlers.py  webhooks.py
backend/src/: .env  app.py  config.py  routers.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/traefik/: traefik.yaml
frontend/: README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
frontend/src/components/UI/: GoldAmount.vue  SilverAmount.vue  UAvatar.vue  UButton.vue  UCard.vue  UInput.vue  UModal.vue  UModalBuy.vue  UModalSell.vue
frontend/src/components/Users/: UsersItem.vue  UsersList.vue
frontend/src/plugins/: axios.ts  websocket.ts
frontend/src/router/: index.ts
frontend/src/stores/: gold.ts  users.ts  websocket.ts
frontend/src/views/: HomeView.vue  UserView.vue
