[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vladyslav Chaliuk <chaliukvladyslav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
websockets = "^12.0"
python-socketio = {extras = ["asyncio-engine"], version = "^5.11.3"}
fastapi-socketio = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
